--- a/src/HomePage.css
+++ b/src/HomePage.css
@@ -3,6 +3,9 @@ body {
     margin: 0;
     padding: 0;
     background-color: #ffffff;
+    /* Decide between these backgrounds! */
+    /*background: linear-gradient(45deg, #f5f5f5, #e0e0e0);*/
+    color: #333;
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -29,14 +32,23 @@ body {
   top: 50%;
   transform: translateY(-50%);
   z-index: 1;
+  transition: transform 0.3s ease;  
 }
 
 .arrow-button:first-child {
   left: 10px;
 }
 
+.arrow-button:first-child:hover {
+  transform: translate(-8px, -50%) scale(1.1); 
+}
+
 .arrow-button:last-child {
   right: 10px;
+}
+
+.arrow-button:last-child:hover {
+  transform: translate(8px, -50%) scale(1.1); 
 }
 
 .book-container {
@@ -57,7 +69,7 @@ body {
 }
 
 .book-info {
-  font-family: 'Courier New', Courier, monospace;
+  font-family:'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
   flex: 1; 
   display: flex;
   flex-direction: column;
@@ -65,4 +77,26 @@ body {
   justify-content: center;
   color: rgb(0, 0, 0); 
   max-width: 400px;
+}
+
+.book-info p {
+  line-height: 1.4;
+}
+
+.logo-link {
+  position: absolute;
+  top: 60px;
+  left: 140px;
+  z-index: 2;
+  transition: opacity 0.3s ease;
+}
+
+.logo-link:hover {
+  opacity: 0.8;
+}
+
+.logo {
+  width: 60px; 
+  height: 60px; 
+  cursor: pointer;
 }
