Updated homepage styling

--- a/src/BurgerMenu.css
+++ b/src/BurgerMenu.css
@@ -1,8 +1,8 @@
 /* BurgerMenu.css */
 .burger-menu {
     position: absolute;
-    top: 85px;
-    right: 160px;
+    top: 80px;
+    left: 80px;
     width: 30px;
     height: 30px;
     cursor: pointer;
