--- a/src/DropdownContent.css
+++ b/src/DropdownContent.css
@@ -9,7 +9,7 @@
     background-color: rgb(0, 0, 0, 0.9);
     z-index: 999;
     display: flex;
-    justify-content: center;
+    justify-content: left;
     align-items: center;
     opacity: 0;
     pointer-events: none;
