--- a/src/HomePage.css
+++ b/src/HomePage.css
@@ -4,7 +4,7 @@ body {
     padding: 0;
     background-color: #ffffff;
     /* Decide between these backgrounds! */
-    /*background: linear-gradient(45deg, #f5f5f5, #e0e0e0);*/
+    background: linear-gradient(45deg, #f5f5f5, #e0e0e0);
     color: #333;
     display: flex;
     flex-direction: column;
